# vinted-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_api.py  test_cli.py
vinted_cli/: __init__.py  api.py  cli.py  format.py
